--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0.33
     ports:
       - "3306:3306"
     environment:
